Fix alignment of trades in trade finder table

--- a/blingaleague/static/blingaleague/css/blingaleague.css
+++ b/blingaleague/static/blingaleague/css/blingaleague.css
@@ -340,7 +340,7 @@ table.trades,
     display: inline-block;
     width: 300px;
     white-space: normal;
-    vertical-align: top;
+    vertical-align: middle;
 }
 
 table.game_table {
